# libeastwood

./: .gitignore  CMakeLists.txt  INSTALL  NEWS  README  SConstruct  TODO  libeastwood.pc  libeastwood.pc.cmake  libeastwood.pc.in  libeastwood.spec
cmake/modules/: FindLibEastwood.cmake  FindLibSamplerate.cmake
doc/: WS-AUD.txt  cnc_specs.txt  duneii_specs.txt  ra_spec.txt
doc/emc/guide/: about.htm  append.htm  author.htm  copyright.htm  history.htm  index.htm  readme.htm  tier1.htm  tier2.htm  tier3.htm  usage.htm
include/: CMakeLists.txt
include/eastwood/: AdlFile.h  ArcFileInfo.h  ArcStream.h  ArcStreamBuf.h  ArchiveManager.h  BlowFish.h  Buffer.h  CnCStrFile.h  CpsFile.h  Decode.h  DirEnt.h  Dune2File.h  EmcFileAssemble.h  EmcFileBase.h  EmcFileDisassemble.h  Exception.h  ExeFile.h  FntFile.h  Font.h  IFF.h  IFFContainer.h  IOStream.h  IStream.h  ISubStream.h  IcnFile.h  IffFile.h  IniFile.h  Log.h  MapFile.h  OStream.h  PakFile.h  PalFile.h  Palette.h  PcxFile.h  ShpFile.h  Sound.h  StdDef.h  StringFile.h  Surface.h  VocFile.h  (+5 more)
include/eastwood/SDL/: Palette.h  Surface.h
include/eastwood/SDL/Mixer/: Player.h  Sound.h
include/eastwood/adl/: analopl.h  diskopl.h  emuopl.h  fmopl.h  kemuopl.h  opl.h  realopl.h  silentopl.h  temuopl.h
include/eastwood/scaler/: scale2x.h  scale3x.h  scalebit.h
include/eastwood/win32/: dirent_win32.h
python/: CMakeLists.txt  eastwood  eastwood.py  setup.py
python/src/: pycpsfile.cpp  pyeastwood.cpp  pyeastwood.h  pyemcfile.cpp  pyemcfile.h  pyicnfile.cpp  pyicnfile.h  pymapfile.cpp  pypakfile.cpp  pypakfile.h  pypalette.cpp  pypalette.h  pypalfile.cpp  pypalfile.h  pyshpfile.cpp  pysound.cpp  pysound.h  pystringfile.cpp  pysurface.cpp  pyvocfile.cpp  pywsafile.cpp  pywsafile.h
python/tests/: test_libeastwood.py
src/: AdlFile.cpp  AdlFile.h  Animation.cpp  Animation.h  ArcStream.cpp  ArchiveManager.cpp  BlowFish.cpp  Buffer.h  CMakeLists.txt  CnCStrFile.cpp  CpsFile.cpp  CpsFile.h  Cpsfile.cpp  Cpsfile.h  Decode.cpp  Decode.h  Dune2File.cpp  Dune2File.h  EastwoodException.cpp  EastwoodException.h  EmcFileAssemble.cpp  EmcFileBase.cpp  EmcFileDisassemble.cpp  Exception.cpp  Exception.h  ExeFile.cpp  ExeFile.h  FntFile.cpp  Font.cpp  Font.h  IFFContainer.cpp  IStream.cpp  IStream.h  ISubStream.cpp  IcnFile.cpp  IcnFile.h  Icnfile.cpp  Icnfile.h  IffFile.cpp  IniFile.cpp  (+42 more)
src/SDL/: MixerPlayer.cpp  MixerPlayer.h  MixerSound.cpp  MixerSound.h  Palette.cpp  Surface.cpp  Surface.h  VocSDL.cpp  VocSDL.h
src/SDL/Mixer/: Player.cpp  Player.h  Sound.cpp  Sound.h
src/adl/: adl.cpp  adl.h  analopl.cpp  analopl.h  diskopl.cpp  diskopl.h  emuopl.cpp  emuopl.h  fmopl.c  fmopl.cpp  fmopl.h  kemuopl.h  opl.h  realopl.cpp  realopl.h  silentopl.h  temuopl.cpp  temuopl.h
src/ecm/: ObjectNames.h  dst.cpp  scriptHandler.cpp  scriptHandler.h  scriptHandlerCompiler.cpp  scriptHandlerCompiler.h  scriptHandlerDecompiler.cpp  scriptHandlerDecompiler.h  scriptOpcodesCompiler.cpp  scriptOpcodesDecompiler.cpp  stdafx.cpp  stdafx.h
src/emc/: EmcFileAssemble.cpp  EmcFileAssemble.h  EmcFileBase.cpp  EmcFileBase.h  EmcFileCompile.cpp  EmcFileCompile.h  EmcFileDecompile.cpp  EmcFileDecompile.h  EmcFileDisassemble.cpp  EmcFileDisassemble.h  EmcFileInternal.h  ObjectNames.h  dst.cpp  scriptHandler.cpp  scriptHandler.h  scriptHandlerCompiler.cpp
src/python/: cpsfile.cpp  cpsfile.h  eastwood.py  pakfile.cpp  pakfile.h  palfile.cpp  palfile.h  pycpsfile.cpp  pycpsfile.h  pyeastwood.c  pyeastwood.cpp  pyeastwood.h  pyemcfile.cpp  pyicnfile.cpp  pyicnfile.h  pymapfile.cpp  pymapfile.h  pypakfile.cpp  pypakfile.h  pypalette.cpp  pypalette.h  pypalfile.cpp  pypalfile.h  pyshpfile.cpp  pyshpfile.h  pysound.cpp  pysound.h  pystringfile.cpp  pystringfile.h  pysurface.cpp  pysurface.h  pyvocfile.cpp  pyvocfile.h  setup.py  surface.cpp  surface.h
src/python/src/: pycpsfile.cpp  pyeastwood.cpp  pyemcfile.cpp  pyemcfile.h  pyicnfile.cpp  pymapfile.cpp  pymapfile.h  pypakfile.cpp  pypakfile.h  pypalette.cpp  pypalfile.cpp  pyshpfile.cpp  pyshpfile.h  pysound.cpp  pysound.h  pystringfile.cpp  pystringfile.h  pysurface.cpp  pysurface.h  pyvocfile.cpp  pywsafile.cpp
src/python/tests/: test_libeastwood.py
src/scaler/: scale2x.cpp  scale3x.cpp  scalebit.cpp  scalebit.h
test/: CMakeLists.txt  REDALERT.INI  einstein.shp  led.fnt  palette.cps  ratest.mix  sole.eng  sov-tran.wsa  sovpaper.cps  tdtest.mix  test.cpp  testy
