PROJECT(LIBEASTWOOD)
SET( PACKAGE "LIBEASTWOOD" )
SET( CMAKE_MODULE_PATH ${LIBEASTWOOD_SOURCE_DIR}/cmake/modules )
cmake_minimum_required(VERSION 2.6)


SET(LIBEASTWOOD_MAJOR "0")
SET(LIBEASTWOOD_MINOR "0")
SET(LIBEASTWOOD_PATCH "1")
SET(VERSION "0.1")

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -O3 -Wno-long-long -Wno-variadic-macros -fPIC -g" )

SET( LIBEASTWOOD_VERSION_INFO "${VERSION}" )
SET( LIBEASTWOOD_SOVERSION_INFO "${LIBEASTWOOD_MAJOR}.${LIBEASTWOOD_MINOR}.${LIBEASTWOOD_PATCH}" )

IF ( DEFINED LIB )
  SET ( LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${LIB}" )
ELSE ( DEFINED  LIB )
  IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
    SET( LIB_SUFFIX "64" )
  ENDIF(CMAKE_SIZEOF_VOID_P MATCHES "8")
  SET ( LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}" )
ENDIF ( DEFINED  LIB )
MESSAGE(STATUS "Libraries will be installed in ${LIB_INSTALL_DIR}" )

IF( DEFINED CMAKE_INSTALL_PREFIX )
  SET( INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX} )
ELSE( DEFINED CMAKE_INSTALL_PREFIX )
  SET( INSTALL_PREFIX /usr/local )
ENDIF( DEFINED CMAKE_INSTALL_PREFIX )

FIND_PACKAGE(SDL REQUIRED)
IF ( NOT SDL_FOUND)
  MESSAGE( FATAL_ERROR " SDL-devel not found" )
ELSE ( NOT SDL_FOUND)
  INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ENDIF( NOT SDL_FOUND)

FIND_PACKAGE(SDL_mixer REQUIRED)
IF ( NOT SDLMIXER_FOUND)
  MESSAGE( FATAL_ERROR " SDL_mixer-devel not found" )
ELSE ( NOT SDLMIXER_FOUND)
  INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})
ENDIF( NOT SDLMIXER_FOUND)


FIND_PACKAGE(LibSamplerate REQUIRED)
IF ( NOT LIBSAMPLERATE_FOUND)
  MESSAGE( FATAL_ERROR " libsamplerate-devel not found" )
ELSE ( NOT LIBSAMPLERATE_FOUND)
  INCLUDE_DIRECTORIES(${LIBSAMPLERATE_INCLUDE_DIR})
ENDIF( NOT LIBSAMPLERATE_FOUND)

MESSAGE(STATUS "soname: ${LIBEASTWOOD_SOVERSION_INFO}")
MESSAGE(STATUS "version: ${VERSION}")

CONFIGURE_FILE(${LIBEASTWOOD_SOURCE_DIR}/libeastwood.pc.cmake ${LIBEASTWOOD_BINARY_DIR}/libeastwood.pc @ONLY)
INSTALL( FILES ${LIBEASTWOOD_BINARY_DIR}/libeastwood.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig )

INSTALL( FILES ${LIBEASTWOOD_SOURCE_DIR}/cmake/modules/FindLibEastwood.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/apps/cmake/modules )

ADD_SUBDIRECTORY( src )

