PROJECT(LIBEASTWOOD)
SET( PACKAGE "libeastwood" )
SET( CMAKE_MODULE_PATH ${LIBEASTWOOD_SOURCE_DIR}/cmake/modules )
cmake_minimum_required(VERSION 2.6)


SET(LIBEASTWOOD_MAJOR "0")
SET(LIBEASTWOOD_MINOR "0")
SET(LIBEASTWOOD_PATCH "1")
SET(VERSION "0.1")

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -O3 -Wno-long-long -Wno-variadic-macros -fPIC -g -O0" )

SET( LIBEASTWOOD_VERSION_INFO "${VERSION}" )
SET( LIBEASTWOOD_SOVERSION_INFO "${LIBEASTWOOD_MAJOR}.${LIBEASTWOOD_MINOR}.${LIBEASTWOOD_PATCH}" )

SET(CPACK_PACKAGE_VERSION, "${VERSION}")

SET(CPACK_SOURCE_IGNORE_FILES ".bzr" "build" ".swp$" ".*~" )

SET( CPACK_PACKAGE_NAME, "${PACKAGE}" )
SET( CPACK_SOURCE_GENERATOR "TGZ;TXZ")
SET( CPACK_SOURCE_PACKAGE_FILE_NAME "${PACKAGE}-${VERSION}" )

INCLUDE(CPack)

IF ( NOT DEFINED CMAKE_INSTALL_LIBDIR )
  SET ( CMAKE_INSTALL_LIBDIR /usr/local/lib )
ENDIF ( DEFINED CMAKE_INSTALL_LIBDIR )

IF( NOT DEFINED CMAKE_INSTALL_PREFIX )
  SET( CMAKE_INSTALL_PREFIX /usr/local )
ENDIF( DEFINED CMAKE_INSTALL_PREFIX )

FIND_PACKAGE(SDL REQUIRED)
IF ( NOT SDL_FOUND)
  MESSAGE( FATAL_ERROR " SDL-devel not found" )
ELSE ( NOT SDL_FOUND)
  INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
ENDIF( NOT SDL_FOUND)

FIND_PACKAGE(SDL_mixer REQUIRED)
IF ( NOT SDLMIXER_FOUND)
  MESSAGE( FATAL_ERROR " SDL_mixer-devel not found" )
ELSE ( NOT SDLMIXER_FOUND)
  INCLUDE_DIRECTORIES(${SDLMIXER_INCLUDE_DIR})
ENDIF( NOT SDLMIXER_FOUND)

FIND_PACKAGE(LibSamplerate REQUIRED)
IF ( NOT LIBSAMPLERATE_FOUND)
  MESSAGE( FATAL_ERROR " libsamplerate-devel not found" )
ELSE ( NOT LIBSAMPLERATE_FOUND)
  INCLUDE_DIRECTORIES(${LIBSAMPLERATE_INCLUDE_DIR})
ENDIF( NOT LIBSAMPLERATE_FOUND)

MESSAGE(STATUS "soname: ${LIBEASTWOOD_SOVERSION_INFO}")
MESSAGE(STATUS "version: ${VERSION}")

OPTION(LIBEASTWOOD_BUILD_PYTHON
  "Build python module."
  OFF)
IF(LIBEASTWOOD_BUILD_PYTHON)
    FIND_PACKAGE(Boost REQUIRED)
    FIND_PACKAGE(PythonLibs REQUIRED)
ENDIF(LIBEASTWOOD_BUILD_PYTHON)

CONFIGURE_FILE(${LIBEASTWOOD_SOURCE_DIR}/libeastwood.pc.in ${LIBEASTWOOD_BINARY_DIR}/libeastwood.pc @ONLY)
INSTALL( FILES ${LIBEASTWOOD_BINARY_DIR}/libeastwood.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig )

INSTALL( FILES ${LIBEASTWOOD_SOURCE_DIR}/cmake/modules/FindLibEastwood.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules )

ADD_SUBDIRECTORY( src )

